[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "github-actions-mcp"
version = "0.1.0"
description = "MCP server for GitHub Actions Agentic Workflows operations dashboard"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]

[project.scripts]
github-actions-mcp = "github_actions_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/github_actions_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
